SERVER-10259 Do not return pointer into temporary string

Convert the location found within the temporary string into the
equivalent (and correct) location in the source string.